--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-media-hook2": "^1.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
