--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.6.2",
+    "i18next": "^19.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^9.0.10",
+    "react-intl": "^5.8.3",
     "react-media-hook2": "^1.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
