--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.6.2",
+    "axios": "^0.20.0",
     "i18next": "^19.7.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
