--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.6.2",
     "axios": "^0.20.0",
+    "global": "^4.4.0",
     "i18next": "^19.7.0",
     "node-sass": "^4.14.1",
+    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
